# tk8710_hal_v1.3

./: .gitignore  AGENTS.md  README.md  compile_ipc_test.sh  read_and_plot_calibration_factors.m  read_tk8710_capture_data.m  test_slot_zero_blocks  test_slot_zero_blocks.c  verify_slot_logic.c
build_rk3506/: Test8710Loopback  Test8710Master  Test8710Master_Calibrate  Test8710P2P  Test8710RFTxTone  Test8710RxSensitivity  Test8710Slave  Test8710W_R_Reg  TestDriverSlave  TestRxSensitivity  TestTRMmain  TestTRMmain_IPC  basic_example  test8710main_3506  test_Driver_TRM_main_3506
cmake/: Build.md  CMakeLists.txt  Makefile.jtool  Makefile.rk3506  build_rk3506.sh  toolchain-rk3506.cmake
docs/: 8710_HAL编程指南-qdm20260305.md  8710_HAL编程指南-v0.02.md  8710_HAL编程指南-v0.03.md  8710_HAL编程指南-v0.04.md  8710_HAL编程指南-v0.5.md  8710_HAL编程指南-v0.6.md  8710_HAL编程指南-v0.7.md  8710_HAL编程指南-v1.00 - 副本.md  API_Reference.md  Porting_Guide.md  TK8710 HAL 设计方案_V0.1.md  TK8710 HAL 设计方案_V0.2.md  TK8710_Driver_API_Complete_Reference.md  TK8710_Driver_API_Parameters.md  TK8710_Driver_API_Parameters_List.md  TK8710_HAL_API.md  TK8710_HAL_概要设计文档.md  TK8710_TRM_Driver_API-20260208.md  TK8710_TRM_Driver_API-20260302.md  TK8710_TRM_Driver_API-20260303.md  TK8710_TRM_Driver_API-qdm20260305.md  TK8710_TRM_Driver_API-qdm20260310.md  TK8710_TRM_Driver_API-qdm20260313.md  TK8710_TRM_Driver_API.md  TK8710_TRM_Driver_API_Enhanced.md  TRM_Driver_功能与流程说明.md  TurMass™ Link 系统MAC 协议规范 - v3.10（修订版）.md  TurMass™ MAC 协议规范 - v3.1.md  TurMass™ MAC 协议规范 - v3.10.md  TurMass™ WAN 网络服务器（NS）接口说明_V1.0.docx  trm_driver_callback_integration.md  卫星物联网网关和一般地面网关T层设计-qdm20260305.md  卫星物联网网关和一般地面网关T层设计-qdm20260310.md  当前工程编译与结构说明.md
inc/: 8710_hal_api.h  hal_api.h  ipc_smp.h  mac_msg_parser.h  tk8710_ipc_comm.h
inc/common/: mempool.h  tk8710_log.h
inc/driver/: tk8710.h  tk8710_api.h  tk8710_debug.h  tk8710_driver_api.h  tk8710_internal.h  tk8710_internal_old.h  tk8710_log.h  tk8710_regs.h  tk8710_rf_regs.h  tk8710_types.h
inc/phy/: phy_api.h  phy_irq.h  phy_log.h  phy_regs.h  phy_test.h
inc/trm/: phy_cfg.h  phy_data.h  phy_stat.h  trm.h  trm_api.h  trm_beam.h  trm_config.h  trm_data.h  trm_internal.h  trm_log.h  trm_mac_parser.h  trm_old.h  trm_queue.h
lib/: libmbedcrypto.so.7
port/: README_RK3506.md  tk8710_hal.h  tk8710_jtool.c  tk8710_rk3506.c
port/jtool/: port_jtool.c
port/jtool/x64/: jtool.h
port/jtool/x86/: jtool.h
src/: 8710_hal_api.c  tk8710_ipc_comm.c
src/common/: mempool.c  tk8710_log.c
src/driver/: tk8710_config.c  tk8710_core.c  tk8710_irq.c  tk8710_log.c
src/hal/: hal_api.c  hal_cb.c  hal_internal.h  hal_status.c
src/phy/: phy_api.c  phy_irq.c  phy_log.c  phy_regs.c  phy_test.c
src/trm/: phy_cfg.c  phy_data.c  phy_stat.c  trm_beam.c  trm_core.c  trm_data.c  trm_freq.c  trm_log.c  trm_mac_parser.c  trm_power.c  trm_queue.c  trm_slot.c
test/DriverTest/: Test8710Loopback.c  Test8710Master.c  Test8710Master_Calibrate.c  Test8710P2P.c  Test8710RFTxTone.c  Test8710RxSensitivity.c  Test8710Slave.c  Test8710W_R_Reg.c  TestDriverSlave.c  TestRxSensitivity.c  test_file_read.c  test_gwrxah_packing.c  仿真数据加载功能说明.md
test/DriverTest/TxDC/: txadc.txt
test/example/: README_IPC.md  TRM_TxValidator_Usage.md  TestTRMmain.c  TestTRMmain_IPC.c  advanced_example.c  basic_example.c  gateway_demo.c  loopback_test.c  parallel_arch_example.c  test8710main_3506.c  test8710main_jtool.c  test_Driver_TRM_main_3506.c  test_hal_phy_api.c  trm_config_example.c  trm_tx_validator.c  trm_tx_validator.h  validator_example.c
test/integration/: test_irq.c  test_tx_rx.c
test/unit/: test_boundary.c  test_driver.c  test_framework.c  test_framework.h  test_rk3506_hal.c  test_simple.c  test_trm_beam.c  test_trm_slot.c
